# CircuitPython_FS3000

./: README.rst  fs3000.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: fs3000_simpletest.py
uml/: fs3000.puml
